# AIProjects

01 - Basic AI Agent/: main.py  pyproject.toml  requirements.txt
02 - Agent with tools/: main.py  pyproject.toml  tools.py
03 - Agent with RAG/: main.py  pyproject.toml
04 - Agent with memory/: main.py  pyproject.toml
05_Basic_LG_Agent/: main.py  pyproject.toml
